--- a/logistics/todo.txt
+++ b/logistics/todo.txt
@@ -2,3 +2,10 @@
 2. contact.html
 3. about.html .box same size
 4. Make transparent logo
+5. Security/Insurance
+6.get rid of, or create other social medias
+
+
+---------------
+Stock Photo link.. Can get bigger versions as well:
+https://www.pexels.com/photo/city-flying-vacation-working-1850/
