--- a/logistics/todo.txt
+++ b/logistics/todo.txt
@@ -4,11 +4,15 @@
 4. Make transparent logo
 5. Security/Insurance
 6.get rid of, or create other social medias
-
+7. metatags
+8. Current services/ pages OR right block of services.html will contain the information?
 
 ---------------
 Stock Photo link.. Can get bigger versions as well:
 https://www.pexels.com/photo/city-flying-vacation-working-1850/
+
+Some more stocks:
+https://bootstrapbay.com/blog/free-stock-photos/
 
 
 https://www.nationalaircargo.com/css/images/aircargo_4.jpg
