mostly quote stuff

--- a/logistics/todo.txt
+++ b/logistics/todo.txt
@@ -14,6 +14,9 @@
       Europe to North America
       Latin America to North America
 
+11. Quote Form background color.
+12. Why choose us? Certifications, tracking, insurance/safety
+
 ---------------
 Stock Photo link.. Can get bigger versions as well:
 https://www.pexels.com/photo/city-flying-vacation-working-1850/
