--- a/logistics/todo.txt
+++ b/logistics/todo.txt
@@ -1,7 +1,6 @@
 1. Global header/footer
 4. Better colors on logo !important
 5. Security/Insurance in services.html !important
-6. get rid of, or create other social medias
 7. metatags
 8. Current services/ pages OR right block of services.html will contain the information?
 9. index<ul> Keep them stacked on mobile, but always below picture on wide view.
@@ -13,20 +12,14 @@
       Europe to North America
       Latin America to North America
 
-13. Keep LAND transport div? OR change to brokerage...?
-14. What do transports link to?
-15. sendquote.php
+15. test sendquote.php
 16. Track your cargo
 
 resources:
 acronyms
-curency converter
 	Worldwide Phone Directory
   world airports --- http://www.worldclassshipping.com/wcs_citycodes_A.html
-  air/ocean container sizes -- http://www.evergreen-marine.com/tei1/jsp/TEI1_Containers.jsp
   customs -- http://www.cbp.gov/trade
-  federal maritime commisoions
-  hazmat -- http://www.ehs.neu.edu/hazardous_material/hazardous_material/
   world clock
   world map
   world ports -- http://www.worldportsource.com/countries.php
