--- a/Inter Custom Logistics/todo.txt
+++ b/Inter Custom Logistics/todo.txt
@@ -1,7 +1,5 @@
 1. Global header/footer
-4. Better colors on logo !important
 5. Security/Insurance in services.html !important
-7. metatags
 8. Current services/ pages OR right block of services.html will contain the information?
 9. index<ul> Keep them stacked on mobile, but always below picture on wide view.
 10. Whether to keep this or not, found inside of oceanimports: // maybe in services.html
@@ -16,15 +14,12 @@
 16. Track your cargo
 
 resources:
-acronyms
-	Worldwide Phone Directory
-  world airports --- http://www.worldclassshipping.com/wcs_citycodes_A.html
-  customs -- http://www.cbp.gov/trade
-  world clock
-  world map
-  world ports -- http://www.worldportsource.com/countries.php
-  incoterms -- http://www.export.gov/faq/eg_main_043740.asp
-  metric converter
+  acronyms
+ ----------------------- !important
+  1. Make transport links easier to click
+  2. Better logo colors
+  3. Firefox compatibility(indexpic)
+  4. Metatags
 ---------------
 Stock Photo link.. Can get bigger versions as well:
 https://www.pexels.com/photo/city-flying-vacation-working-1850/
